--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Articulator</title>
-<link rel="stylesheet" type="text/css" href="css/index.css">
-<script src="js/jquery-3.1.0.js"></script>
-<script src="js/recognition.js"></script>
-
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Articulator</title>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
+</head>
+<body>
 <!--<textarea id="txtConverse"></textarea>
-<input id="btnConverse" value="Let's chat" type="button" />-->
-
-<input id="btn_start" value="Lets hear" type="button" />
-
-<div id="results">
-  <span id="final_span" class="final"></span>
-  <span id="interim_span" class="interim"></span>
-  <p>
+<input id="btnConverse" value="Let's chat" type="button" />-->	
+<div class="container">
+	<ul class="pages">
+		<li class="chat page">
+			<div id="results">
+				<span id="final_span" class="final">This is a test</span>
+				<span id="interim_span" class="interim">This is a test</span>
+				<p>
+			</div>			
+			<div class="chatArea">
+				<ul class="messages"></ul>
+			</div>
+		</li>
+	</ul>
 </div>
-
-<ul class="pages">
-	<li class="chat page">
-	  <div class="chatArea">
-	    <ul class="messages"></ul>
-	  </div>
-	  <input class="inputMessage" placeholder="Speak after pressing mic .."/>
-	</li>
-</ul>
-
-
+<footer>
+	<div class="container">
+	  <div class="row">
+	  	<div class="col-md-10"><input class="inputMessage" placeholder="Speak after pressing mic .."/></div>
+	  	<div class="col-md-2">
+		  <button id="btn_start" value="Lets hear">
+		  	<img id="img_start" src="images/mic.png" alt="Start">
+		  </button>		  		
+	  	</div>
+	  </div>			
+	</div>
+</footer>
+<script src="js/lib/jquery-3.1.0.js"></script>
+<script src="js/lib/bootstrap.min.js"></script>
+<script src="js/recognition.js"></script>
 <script type="text/javascript">
-	$(document).ready(function() {
+	/*$(document).ready(function() {
 
 		$('#btnConverse').on('click', function(e) {
 			$.ajax({
@@ -39,5 +51,7 @@
 			});
 		})
 
-	});
-</script>
+	});*/
+</script>	
+</body>
+</html>
