--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,18 @@
 <input id="btnConverse" value="Let's chat" type="button" />-->
 <div class="container-fluid chat-container">
 	<div class="row">
+		<div class="col-md-12">
+	      <div class="chatArea">
+	        <ul class="messages">
+				<!--<li class="message">
+					<div class="messageBot left">This is a test message !! This is a test message !! This is a test message !! This is a test message !! This is a test message !! This is a test message !! This is a test message !! This is a test message !!</div>
+				</li>
+				<li class="message">
+					<div class="messageUser right">This is a test message !!</div>
+				</li>-->
+	        </ul>
+	      </div>
+		</div>
 	</div>
 	<!--<ul class="pages">
 		<li class="chat page">
@@ -40,8 +52,9 @@
   				<div class="col-md-12">
 			  		<div class="inputMessage left">
 			  			<div class="left">
-			  				<span id="final_span" class="final"></span>
-							<span id="interim_span" class="interim"></span>			  				
+			  				<!--<span id="final_span" class="final"></span>
+							<span id="interim_span" class="interim"></span>-->
+							<input id="txtInput" class="inputMessage" placeholder="Speak after pressing mic .."/>
 			  			</div>
 			  			<div class="right"><input id="btn_send" class="icon" type="image" src="images/tick_blue.png" alt="Send"></div>
 			  			<div class="right"><input id="btn_clear" class="icon" type="image" src="images/close_red.png" alt="Clear"></div>
