--- a/public/index.html
+++ b/public/index.html
@@ -19,30 +19,31 @@
 	      </div>
 		</div>
 	</div>
-  <div class="row">
-  	<div class="col-md-2">
-  		<div class="center mic-container">
-		  <a id="btn_start">
-		  	<img id="img_start" src="images/mic.png" alt="Start">
-		  </a>
-  		</div>
-  		<div class="guide"></div>
-  	</div>
-  	<div class="col-md-10">
-  		<div class="input-container left">
-  			<div class="left">
-  				<span id="final_span" class="final"></span>
-				<span id="interim_span" class="interim"></span>
-  			</div>
-  			<!--
-  			<div class="right"><input id="btn_send" class="icon" type="image" src="images/tick_blue.png" alt="Send"></div>
-  			<div class="right"><input id="btn_clear" class="icon" type="image" src="images/close_red.png" alt="Clear"></div>
-  			-->
-  		</div>
-  	</div>
-  </div>	
 </div>
-<div class="container-fluid">			
+<div class="container-fluid interactive-container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="center mic-container">
+        <a id="btn_start">
+          <img id="img_start" src="images/mic.png" alt="Start">
+        </a>
+      </div>
+      <div class="guide"></div>
+    </div>
+  </div>
+  <div class="row">  
+    <div class="col-md-12">
+      <div class="input-container left">
+        <div class="left">
+          <span id="final_span" class="final"></span>
+          <span id="interim_span" class="interim"></span>
+          <!--<input id="txtInput" class="inputMessage" placeholder="Speak after pressing mic .."/>
+          <input id="btn_send" class="icon" type="image" src="images/tick_blue.png" alt="Send">-->
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>    
 </div>
 <script src="js/lib/jquery-3.1.0.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
